fixed form overflow on navbar

--- a/React/my-react-app/src/Components/Registration component/DoctorRegistration.css
+++ b/React/my-react-app/src/Components/Registration component/DoctorRegistration.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   width: 100vw;
 }
 
@@ -13,12 +12,6 @@
 
 .table td {
   padding: 8px;
-}
-
-.legend {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
 }
 
 .form-control {
@@ -38,7 +31,10 @@
 }
 
 legend {
-  margin: 50px;
+  margin-top: 30px;
   font-size: 30px;
   text-align: center;
+}
+.button-center {
+  justify-content: space-between;
 }
